--- a/WorkTime.Web/Views/Users/Create.cshtml
+++ b/WorkTime.Web/Views/Users/Create.cshtml
@@ -10,6 +10,10 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <div class="form-floating mt-2">
+                <input type="radio" name="userType" value="Исполнитель"/>
+                <input type="radio" name="userType" value="Заказчик"/>
+            </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating mt-2">
                 <input asp-for="Email" class="form-control" />
@@ -37,9 +41,59 @@
                 <span class="text-danger"></span>
             </div>
             <div class="form-floating mt-2">
+                <input class="form-control" name="contactPhone" />
+                <label>Контактный телефон</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" name="contactEmail" />
+                <label>Контактный Email</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" name="socialNetworkContact" />
+                <label>Контакт в соц. сети</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" name="passportNum" />
+                <label>Серия паспорта</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" name="personalAddress" />
+                <label>Адрес</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
                 <input name="password" class="form-control" />
                 <label class="control-label">Пароль</label>
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" autocomplete="BankAccount" name="bankAccount" />
+                <label>Счёт в банке</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" autocomplete="BankName" name="bankName" />
+                <label>Наименование банка</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" autocomplete="CorInv" name="corInv" />
+                <label>Корректирующий счёт</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" autocomplete="bik" name="bik" />
+                <label>БИК</label>
+                <span class="text-danger"></span>
+            </div>
+            <div class="form-floating mt-2">
+                <input class="form-control" autocomplete="bankLocation" name="bankLocation" />
+                <label>Город</label>
+                <span class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Создать" class="btn btn-primary" />
