--- a/WorkTime.Web/Views/Users/Create.cshtml
+++ b/WorkTime.Web/Views/Users/Create.cshtml
@@ -3,107 +3,114 @@
 @{
     ViewData["Title"] = "Добавление нового пользователя";
 }
-
-<h1>Добавление нового пользователя</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div class="form-floating mt-2">
-                <input type="radio" name="userType" value="Исполнитель"/>
-                <input type="radio" name="userType" value="Заказчик"/>
-            </div>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating mt-2">
-                <input asp-for="Email" class="form-control" />
-                <label asp-for="Email" class="control-label"></label>
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" autocomplete="Name" aria-required="true" name="name" />
-                <label>Имя</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" autocomplete="Surname" aria-required="true" name="surname" />
-                <label>Фамилия</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" autocomplete="Patronymic" name="patronymic" />
-                <label>Отчество</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" name="hourlyWage" />
-                <label>Почасовая ставка</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" name="contactPhone" />
-                <label>Контактный телефон</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" name="contactEmail" />
-                <label>Контактный Email</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" name="socialNetworkContact" />
-                <label>Контакт в соц. сети</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" name="passportNum" />
-                <label>Серия паспорта</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" name="personalAddress" />
-                <label>Адрес</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input name="password" class="form-control" />
-                <label class="control-label">Пароль</label>
-                <span asp-validation-for="PasswordHash" class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" autocomplete="BankAccount" name="bankAccount" />
-                <label>Счёт в банке</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" autocomplete="BankName" name="bankName" />
-                <label>Наименование банка</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" autocomplete="CorInv" name="corInv" />
-                <label>Корректирующий счёт</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" autocomplete="bik" name="bik" />
-                <label>БИК</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-floating mt-2">
-                <input class="form-control" autocomplete="bankLocation" name="bankLocation" />
-                <label>Город</label>
-                <span class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Создать" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="mx-auto col-md-8 form-background">
+    <div>
+        <a class="torightside" asp-action="Index">Вернуться к списку</a>
     </div>
-</div>
+    <h1 class="text-center">Добавление нового пользователя</h1>
 
-<div>
-    <a asp-action="Index">Вернуться к списку</a>
+    <hr />
+    <div class="row">
+        <div class="col-md-10 col-lg-6">
+            <form asp-action="Create">
+                <div class="mt-2">
+                    <h5>Добавить пользователя как:</h5>
+                    <input type="radio" name="userType" id="performer" value="Исполнитель" />
+                    <label for="performer">Исполнитель</label>
+                    <input type="radio" name="userType" id="customer" value="Заказчик" />
+                    <label for="customer">Заказчик</label>
+                </div>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <h5 class="mt-2">Данные для авторизации</h5>
+                <div class="form-floating mt-2">
+                    <input asp-for="Email" class="form-control" />
+                    <label asp-for="Email" class="control-label"></label>
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input name="password" class="form-control" />
+                    <label class="control-label">Пароль</label>
+                    <span asp-validation-for="PasswordHash" class="text-danger"></span>
+                </div>
+                <h5 class="mt-2">Рабочая информация</h5>
+                <div class="form-floating mt-2">
+                    <input class="form-control" name="hourlyWage" />
+                    <label>Почасовая ставка (по умолчанию)</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" name="contactPhone" />
+                    <label>Контактный телефон</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" name="contactEmail" />
+                    <label>Контактный Email</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" name="socialNetworkContact" />
+                    <label>Контакт в соц. сети</label>
+                    <span class="text-danger"></span>
+                </div>
+                <h5 class="mt-2">Персональная информация</h5>
+                <div class="form-floating mt-2">
+                    <input class="form-control" autocomplete="Name" aria-required="true" name="name" />
+                    <label>Имя</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" autocomplete="Surname" aria-required="true" name="surname" />
+                    <label>Фамилия</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" autocomplete="Patronymic" name="patronymic" />
+                    <label>Отчество</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" name="passportNum" />
+                    <label>Серия паспорта</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" name="personalAddress" />
+                    <label>Адрес</label>
+                    <span class="text-danger"></span>
+                </div>
+                <h5 class="mt-2">Банковские реквизиты</h5>
+                <div class="form-floating mt-2">
+                    <input class="form-control" autocomplete="BankAccount" name="bankAccount" />
+                    <label>Счёт в банке</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" autocomplete="BankName" name="bankName" />
+                    <label>Наименование банка</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" autocomplete="CorInv" name="corInv" />
+                    <label>Корректирующий счёт</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" autocomplete="bik" name="bik" />
+                    <label>БИК</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-floating mt-2">
+                    <input class="form-control" autocomplete="bankLocation" name="bankLocation" />
+                    <label>Город</label>
+                    <span class="text-danger"></span>
+                </div>
+                <div class="form-group mt-2">
+                    <input type="submit" value="Создать" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
