--- a/WorkTime.Web/Views/Shared/_SideBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_SideBar.cshtml
@@ -64,6 +64,11 @@
                                 <i class="my-2 ms-3 bx bxs-user-account"></i> <span class="ms-2 d-sm-inline text-dark">Пользователи</span>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link align-middle px-0" asp-area="" asp-controller="Companies" asp-action="Index">
+                                <i class='my-2 ms-3 bx bxs-business'></i> <span class="ms-2 d-sm-inline text-dark">Компании</span>
+                            </a>
+                        </li>
                     }
 
                 </ul>
