--- a/WorkTime.Web/Views/Projects/Create.cshtml
+++ b/WorkTime.Web/Views/Projects/Create.cshtml
@@ -18,9 +18,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Заказчик</label>
-                <input type="radio" name="customerType" id="company-radio" onclick="checkRadio()"/>
+                <input type="radio" name="customerType" id="company-radio" value="company" onclick="checkRadio()"/>
                 <label for="company">Компания</label>
-                <input type="radio" name="customerType" id="person-radio" onclick="checkRadio()" />
+                <input type="radio" name="customerType" id="person-radio" value="person" onclick="checkRadio()" />
                 <label for="person">Физ./Юр. лицо</label>
                 <select hidden class="form-control" name="companySelect" id="company-select">
                     @foreach (var company in ViewBag.CustomerCompany)
