--- a/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
+++ b/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
@@ -3,7 +3,7 @@
 <form method="post" onsubmit="return send();">
     <div id="yseditor" style="width: 297mm">
         <p class=MsoNormal align=center style='text-align:center'><b style='mso-bidi-font-weight:
-normal'><span style='font-size:12.0pt'>ДОГОВОР № 04/Р<o:p></o:p></span></b></p>
+normal'><span style='font-size:12.0pt'>ДОГОВОР № @ViewBag.Contract.ContrNum/Р<o:p></o:p></span></b></p>
 
 <p class=MsoNormal align=center style='text-align:center'><b style='mso-bidi-font-weight:
 normal'><span style='font-size:12.0pt'>на оказание услуг<o:p></o:p></span></b></p>
