--- a/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
+++ b/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
@@ -9,7 +9,8 @@
         <p class=MsoNormal align=center style='text-align:center'>
             <b>
                 <span style='font-size:12.0pt'>
-                    ДОГОВОР № <input id="contNumbINput" style='font-size:12.0pt' value="@ViewBag.Contract.ContractNumber" name="ContractNumber" /> <span id="contNum"></span><o:p></o:p>
+                    ДОГОВОР № <input id="contNumbInput" style='font-size:12.0pt' value="@ViewBag.Contract.ContractNumber" name="contractNumber" /> 
+                    <span id="contNum"></span><o:p></o:p>
                 </span>
             </b>
         </p>
@@ -55,9 +56,10 @@
                 , именуемый в дальнейшем «Заказчик», с одной стороны, и <o:p></o:p>
             </span>
         </p>
-        <p class=MsoNormal style='text-align:justify'>
+        @{/*<p class=MsoNormal style='text-align:justify'>
             <span style='font-size:12.0pt'><o:p>&nbsp;</o:p></span>
-        </p>
+        </p>*/
+        }
         <p class=MsoNormal style='text-align:justify'>
             <span style='font-size:12.0pt'>
                 гражданин
@@ -846,7 +848,6 @@
     <script src="/js/yseditor.min.js"></script>
 
     <script>
-
         var myEditor = new ysEditor();
 
         myEditor.init({
@@ -855,15 +856,16 @@
             footer: false
         });
 
-        $(".yseditor-content").addClass('px-5');
-        $(".yseditor-content").addClass('py-5');
+        document.querySelector(".yseditor-content").addClass('px-5');
+        document.querySelector(".yseditor-content").addClass('py-5');
 
         function send() {
+            let contractNumberField = document.querySelector("#contNumbInput");
+            contractNumberField.toggleAttribute("hidden");
+            document.querySelector("#contNum").textContent = contractNumberField.value;
             document.querySelector("#hidden").value = myEditor.getHTML();
             return true;
         };
-
-
     </script>
 
 }
