--- a/WorkTime.Web/Views/Projects/CreateContractTemplateInProject.cshtml
+++ b/WorkTime.Web/Views/Projects/CreateContractTemplateInProject.cshtml
@@ -740,7 +740,7 @@
                     Адрес: Adress
                 </p>
 
-                <p>ИНН 662300552040</p>
+                <p>ИНН ViewBag.BankInfo.</p>
 
                 <p>Счёт (&#8381;) 40802810902500112055</p>
 
