Updated contract template and creation template

--- a/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
+++ b/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
@@ -18,7 +18,9 @@
     <script>
         var myEditor = new ysEditor();
 
-        /* \|/ айдишники полей для заполнения
+        /* 
+        айдишники полей для заполнения
+
         performerFullName
         performerCorrAcc
         performerBIK
