--- a/WorkTime.Web/Views/Projects/CreateContractTemplateInProject.cshtml
+++ b/WorkTime.Web/Views/Projects/CreateContractTemplateInProject.cshtml
@@ -14,7 +14,17 @@
 </div>
 
 <form method="post" onsubmit="return send();">
-    <input hidden name="projectId" value="@ViewBag.Project.Id" />
+    <input hidden name="ProjectId" value="ViewBag.Project.Id" />
+    <div class="form-group">
+        <label class="control-label">Шаблон для -</label>
+        <select name="empTypeId">
+            @foreach (var item in ViewBag.EmpTypes)
+            {
+                <option value="@item.Id">@item.Name</option>
+            }
+        </select>
+    </div>
+    
     <div id="yseditor" style="width: 297mm">
         <p class=MsoNormal align=center style='text-align:center'>
             <b>
