--- a/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
+++ b/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
@@ -5,7 +5,7 @@
 
 <form method="post" onsubmit="return send();">
     <input hidden name="contractId" value="@ViewBag.Contract.Id"/>
-    <div id="yseditor" style="width: 297mm">
+    <div id="yseditor" style="width: 297mm; background-color: white;">
         @ViewBag.Template
     </div>
     <input type="hidden" name="htmlCode" id="hidden" />
