--- a/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
+++ b/WorkTime.Web/Views/Projects/CreateUserContract.cshtml
@@ -1,5 +1,8 @@
 ﻿@using WorkTime.Web.Services
 @inject UserInformation UserInfo
+@{
+    ViewData["Title"] = "Создание договора";
+}
 
 <link rel="stylesheet" href="/css/objects/yseditor.min.css" />
 
