--- a/WorkTime.Web/Views/Projects/EditContractTemplateInProject.cshtml
+++ b/WorkTime.Web/Views/Projects/EditContractTemplateInProject.cshtml
@@ -1,6 +1,10 @@
 ﻿@using WorkTime.Web.Services
 @inject UserInformation UserInfo
 
+@{
+    ViewData["Title"] = "Редактирование шаблон договора";
+}
+
 <link rel="stylesheet" href="/css/objects/yseditor.min.css" />
 <div style="
     display: flex;
