--- a/WorkTime.Web/Views/Projects/Index.cshtml
+++ b/WorkTime.Web/Views/Projects/Index.cshtml
@@ -3,12 +3,41 @@
 @{
     ViewData["Title"] = "Список проектов";
 }
+<div class="row">
+    <div class="col">
+        <h1>Список проектов</h1>
 
-<h1>Список проектов</h1>
+        <p>
+            <a type="button" class="btn btn-primary" asp-action="Create">Добавить проект</a>
+        </p>
+    </div>
 
-<p>
-    <a type="button" class="btn btn-primary" asp-action="Create">Добавить проект</a>
-</p>
+    <div class="col-4">
+        <table>
+            <thead>
+                <tr>
+                    <th>
+                        Шаблоны договоров
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var template in ViewBag.EmpTypes)
+                {
+                    <tr>
+                        <td>
+                            <a asp-action="EditContractTemplateInProject" asp-route-id="@template.Id">@template.Name</a>
+                        </td>
+                        <td>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
 <table class="table">
     <thead>
         <tr>
